Closed
Bug 662338
Opened 14 years ago
Closed 14 years ago
TI: Assertion failure: [infer failure] Missing type pushed 0: Function:prototype:new
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
The following testcase asserts on TI revision 334428e1d5aa (run with -j -m -n -a), tested on 64 bit:
let (parsesSuccessfully = SyntaxError) function () parsesSuccessfully
Comment 1•14 years ago
|
||
Did not handle the case where AllocFlatClosure tries to clone an object with singleton type (was thrown by a comment and thought the code was tracer-only), and the resulting cloned object had the default generic function type (a new behavior, we need to guarantee JS_CloneFunctionObject always clones its argument but also need to preserve the singleton invariant on type objects).
http://hg.mozilla.org/projects/jaegermonkey/rev/380d5080ea15
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 2•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug662338.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•