[INFER] Watch for singleton function objects in js_AllocFlatClosure, bug 662338.