js/src/jit-test/tests/basic/bug662338.js
@@ -1,0 +1,1 @@
+let (parsesSuccessfully = SyntaxError) function () parsesSuccessfully
